src/test/ui/parser/raw-str-delim.stderr
error: found invalid character; only `#` is allowed in raw string delimitation: ~
  --> $DIR/raw-str-delim.rs:2:5
   |
LL |     r#~"#"~# //~ ERROR found invalid character; only `#` is allowed in raw string delimitation
   |     ^^

error: aborting due to previous error

